--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   http: ^1.3.0
   flutter_calendar_carousel: ^2.5.3
-  table_calendar: ^3.1.3
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +69,7 @@ flutter:
 
   assets:
     - assets/projectback.jpg
+    - assets/autoprompt.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
